# progmo-mcp-server

./: .clinefile  .gitignore  COVERAGE.md  Cargo.toml  Makefile  README.md  TEST_PLAN.md  config.toml  tarpaulin-report.html
.github/workflows/: coverage.yml  test.yml
docs/projects/: README.md
docs/projects/2025-03-bootstrap/: README.md
docs/projects/2025-03-next-steps/: EXECUTIVE_SUMMARY.md  IMMEDIATE_FOCUS.md  IMPLEMENTATION_PLAN.md  MCP_INTEGRATION.md  NEXT_STEPS-2.md  NEXT_STEPS.md  PERSONAL_PREFERENCE_TOOL.md  README.md  TEST_PLAN.md  VECTOR_STORE_DESIGN.md
docs/resources/: running_as_daemon.md
docs/resources/current-info/: tarpaulin-report.html
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  server.rs  vector_store.rs
src/api/: models.rs
src/cli/: effects.rs  mod.rs  pure.rs
src/config/: pure.rs
src/mcp/: mock.rs  mod.rs
src/text_processing/: embedding.rs  mod.rs  pure.rs
src/vector_store/: mod.rs  pure.rs
tests/: api_tests.rs  cli_coverage_tests.rs  cli_integration_tests.rs  cli_tests.rs  config_coverage_tests.rs  config_tests.rs  main_tests.rs  mcp_coverage_tests.rs  mcp_tests.rs  mcp_vector_store_tests.rs  server_coverage_tests.rs  server_tests.rs  text_processing_embedding_tests.rs  text_processing_tests.rs  vector_store_coverage_tests.rs  vector_store_pure_tests.rs  vector_store_tests.rs
